Fix second book Page with empty PlayerFoodList